--- a/turbosmarthome/templates/base.html
+++ b/turbosmarthome/templates/base.html
@@ -47,13 +47,14 @@
             {% endif %}
         </div>
     </nav>
-    <div class="container">
-        <div class="row content">
-            {% if messages %}
-                {% for message in messages %}
-                    <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message }}</div>
-                {% endfor %}
-            {% endif %}
+    <div class="container content">
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message }}</div>
+            {% endfor %}
+        {% endif %}
+        <div class="row ">
+
             {% block content %}
                 <p>Use this document as a way to quick start any new project.</p>
             {% endblock content %}
@@ -62,9 +63,8 @@
     </div> <!-- /container -->
 
 
-    <!-- Le javascript
+    <!-- javascript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
     {% block javascript %}
       <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
