--- a/turbosmarthome/templates/main/profile_edit.html
+++ b/turbosmarthome/templates/main/profile_edit.html
@@ -15,7 +15,7 @@
             </div>
         </div>
 
-        <div class="form-group row">
+<!--         <div class="form-group row">
             <label for="{{ form.email.id_for_label }}" class="col-md-2 col-xs-12 col-form-label">Email</label>
             <div class="col-md-10 col-xs-12">
                 {{ form.email }}
@@ -23,7 +23,7 @@
                     <div class="form-control-feedback">{{ form.email.errors }}</div>
                 {% endif %}
             </div>
-        </div>
+        </div> -->
 
         <div class="form-group row {% if form.phone_number.errors %}has-danger{% endif %}">
             <label for="{{ form.phone_number.id_for_label }}" class="col-md-2 col-xs-12 col-form-label">Phone Number</label>
